Fixed textbox alignment on result return

--- a/goodgamersapp/client/src/App.css
+++ b/goodgamersapp/client/src/App.css
@@ -39,8 +39,8 @@
   min-height: 20vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: top;
+  align-items: left;
+  justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
 }
